--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -73,13 +73,6 @@ jobs:
             ${{ runner.temp }}/hugo_cache
           key: ${{ steps.cache-restore.outputs.cache-primary-key }}
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -91,6 +84,6 @@ jobs:
         run: |
           aws s3 cp public/ s3://godot.berlin
 
-      - name: Upload to S3
+      - name: Invalidate Cloudfront
         run: |
           aws cloudfront create-invalidation --distribution-id E12V3ZFP8BEESL --paths "/*"          
