--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -82,7 +82,7 @@ jobs:
    
       - name: Upload to S3
         run: |
-          aws s3 cp public/ s3://godot.berlin
+          aws s3 sync public/ s3://godot.berlin/ --delete
 
       - name: Invalidate Cloudfront
         run: |
