--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,19 +11,19 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
+  name = "News"
   pageRef = "posts"
   weight = 10
 
-[[main]]
-  name = "Parent"
-  weight = 20
+#[[main]]
+#  name = "Parent"
+#  weight = 20
 
-[[main]]
-  name = "example sub-menu 1"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
+#[[main]]
+#  name = "example sub-menu 1"
+#  parent = "Parent"
+#  pageRef = "posts"
+#  weight = 20
 
 #[[main]]
 #  name = "example sub-menu 2"
@@ -36,11 +36,11 @@
 #  pageRef = "tags/interesting-topic"
 #  weight = 10
 
-[[subnavigation]]
-  name = "My Awesome Category"
-  pre = "github"
-  pageRef = "categories/awesome"
-  weight = 20
+#[[subnavigation]]
+#  name = "My Awesome Category"
+#  pre = "github"
+#  pageRef = "categories/awesome"
+#  weight = 20
 
 #[[main]]
 #  name = "Categories"
