--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -9,8 +9,8 @@ title = "godot.berlin"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
-  # logo = "img/logo.png"
-  # secondaryLogo = "img/secondary-logo.png"
+  # logo = "img/logo-1.png"
+  # secondaryLogo = "img/logo-2.png"
   # description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
