--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -9,10 +9,10 @@ defaultContentLanguage = "en"
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-summaryLength = 0
+summaryLength = 80
 
 buildDrafts = false
-buildFuture = false
+buildFuture = true
 
 enableEmoji = true
 
@@ -27,6 +27,7 @@ enableEmoji = true
 [taxonomies]
   tag = "tags"
   category = "categories"
+  meetup = "meetups"
   author = "authors"
   series = "series"
 
