--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -24,6 +24,10 @@ enableEmoji = true
 [imaging]
   anchor = 'Center'
 
+[permalinks]
+  [permalinks.page]
+    meetups = '/:slug/:year/:month/'
+  
 [taxonomies]
   tag = "tags"
   category = "categories"
