Removing baseurl override from github workflow

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -24,9 +24,9 @@ enableEmoji = true
 [imaging]
   anchor = 'Center'
 
-[permalinks]
-  [permalinks.page]
-    meetups = '/:slug/:year/:month/'
+#[permalinks]
+#  [permalinks.page]
+#    meetups = '/:slug/:year/:month/'
   
 [taxonomies]
   tag = "tags"
