Hmm, no idea what's wrong with the layout now.

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -28,7 +28,7 @@ disableTextInHeader = false
 defaultFeaturedImage = "img/featured_default.png" # used as default for featured images in all articles
 
 # highlightCurrentMenuArea = true
-smartTOC = true
+# smartTOC = true
 # smartTOCHideUnfocusedChildren = true
 
 giteaDefaultServer = "https://git.fsfe.org"
