--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -63,6 +63,7 @@ jobs:
           hugo \
             --gc \
             --minify \
+            --baseURL "https://godot.berlin" \
             --cacheDir "${{ runner.temp }}/hugo_cache"
       - name: Cache Save
         id: cache-save
