--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 theme = "blowfish" 
-baseURL = "https://godot.berlin/"
+baseURL = "https://godot.berlin"
 defaultContentLanguage = "en"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
@@ -23,6 +23,10 @@ enableEmoji = true
 
 [imaging]
   anchor = 'Center'
+
+[permalinks]
+  [permalinks.page]
+    meetups = '/:slug/:year/:month/'
 
 [taxonomies]
   tag = "tags"
