Added a table to the homepage as a test

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -24,6 +24,9 @@ enableEmoji = true
 [imaging]
   anchor = 'Center'
 
+[security]
+  enableInlineShortcodes = true
+  
 [taxonomies]
   tag = "tags"
   category = "categories"
